mdapioutput/unpackaged/objects/Dealership__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Dealership</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dealership Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealerships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>